# FuseMuse-

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  README.md  Vagrantfile  main.cpp  vagrant_setup.yml
Driver Modules/: main.cpp  simpledriver.cpp  simpledriver.hpp
Driver Modules/libfm/: composition.h  composition_metrics.h  constants.h  dynamics.h  event.h  note.h  packetpart.h  part.h  utilities.h
FMDataStructures/: Chord.h  CompositionMetrics.cpp  CompositionMetrics.h  Constants.h  Note.h  TimeSignature.h  Utilities.h
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.pro  qt-Release.pro
nbproject/private/: private.xml
src/: CMakeLists.txt  Constants.h  Note.h  TimeSignature.h  Utilities.h  chord.h  composition.h  composition_metrics.h  constants.h  dynamics.h  event.h  note.h  packet_part.h  part.h  shell.cpp  utilities.h
src/libfm/: CMakeLists.txt  chord.h  composition.h  composition_metrics.h  constants.h  dynamics.h  note.h  packet.h  packetpart.h  part.h  utilities.h
tests/: CMakeLists.txt  CMakeLists.txt.in  chordtest.cpp  compositionmetricstest.cpp  compositiontest.cpp  dynamicstest.cpp  eventinheritancetest.cpp  notetest.cpp  parttest.cpp  testmain.cpp  testtest.cpp  utilitiestest.cpp
